--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>All About Llama</title>
-  <link rel="stylesheet" href="../css/index.css">
-  <link rel="stylesheet" href="../css/global.css">
+  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/global.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +22,7 @@
   <main>
     <h1>Hello, World!</h1>
     <h2>My name is Mr. Llama!</h2>
-    <img id="profile-pic" src="../me.jpg" alt="mr-llama">
+    <img id="profile-pic" src="/me.jpg" alt="mr-llama">
     <p>
       I study Web Development at 
       <a href="https://www.wyncode.co" target="_blank">
@@ -34,15 +34,15 @@
       <ul id="language-list">
         <li>
           <h3>Ruby</h3>
-          <img src="../ruby.jpg" alt="ruby">
+          <img src="ruby.jpg" alt="ruby">
         </li>
         <li>
           <h3>Javascript</h3>
-          <img src="../js.jpg" alt="javascript">
+          <img src="js.jpg" alt="javascript">
         </li>
         <li>
           <h3>Python</h3>
-          <img src="../python.jpg" alt="python">
+          <img src="python.jpg" alt="python">
         </li>
       </ul>
     </div>
