--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/global.css">
-  <link rel="stylesheet" href="../css/forms.css">
+  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="forms.css">
   <title>Contact Me</title>
 </head>
 <body>
